Ensure focus state on sponsor logo is visible

--- a/src/_includes/css/components/sponsors.css
+++ b/src/_includes/css/components/sponsors.css
@@ -18,6 +18,12 @@
   margin: 0;
 }
 
+/* Ensure that focus state covers the whole link image */
+.sponsor-list-item-link {
+  display: block;
+  width: 100%;
+}
+
 .sponsor-list-item-link img {
   display: block;
   width: auto;
